5.2.Generic.Video[#204074]-bugfix